--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@angular/platform-browser-dynamic": "^16.0.2",
     "@angular/router": "^16.0.2",
     "@auth0/angular-jwt": "^5.1.0",
+    "@ngrx/store": "^16.2.0",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.2.3",
     "dotenv": "^16.0.3",
