--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGODB_URI=mongodb://127.0.0.1:27017/angularfullstack
+MONGODB_URI=mongodb+srv://ouzorr:Flipiflop123!@atlascluster.0e3h1bb.mongodb.net/?retryWrites=true
 MONGODB_TEST_URI=mongodb://localhost:27017/test
 SECRET_TOKEN=catswillruletheworld
